# minisumo_esp32_official

./: .gitignore  CMakeLists.txt  sdkconfig
components/MMA845X/: CMakeLists.txt
components/MMA845X/esp8266_wrapper/: esp8266_wrapper.c  esp8266_wrapper.h
components/MMA845X/mma845x/: mma845x_platform.h
components/motor_control/: CMakeLists.txt  motor_control.c
components/motor_control/include/: motor_control.h
components/motor_control/src/: bdc_motor.c  motor_control.c
components/vl530x/: CMakeLists.txt
components/vl530x/core/src/: vl53l0x_api.c  vl53l0x_api_core.c
components/vl530x/platform/inc/: vl53l0x_esp32.h  vl53l0x_platform.h  vl53l0x_platform_log.h  vl53l0x_types.h
components/vl530x/platform/src/: vl53l0x_esp32.c  vl53l0x_platform.c
main/: CMakeLists.txt  main.c
